# python-backend-course

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
hw_1/: README.md  homework_1.py  homework_1_tests.py
hw_2/: main.py  pyproject.toml  schemas.py  tests.py
hw_3/: Dockerfile.app  app.py  docker-compose.yml
hw_3/demo_service/api/: contracts.py  main.py  users.py  utils.py
tests/: test_coverage.py
