[tool.poetry]
name = "python-backend-course"
version = "0.1.0"
description = ""
authors = ["Danil Dorofeev <danildorofeev2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.30.6"
requests = "^2.32.3"
urllib3 = "1.26.15"
faker = "^30.8.1"
httpx = "^0.27.2"
async-asgi-testclient = "^1.4.11"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
responses = "^0.25.3"
prometheus-fastapi-instrumentator = "^7.0.0"
fastapi = "^0.115.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[MASTER]
init-hook='import sys; sys.path.append(".")'
